@@ -1,5 +1,7 @@
 AUX supertux-9999-cmakelists.patch 365 RMD160 2f9ee605001b8dd4bd35a27cbc718c181a7c7736 SHA1 e2ade9183de3904fa0412e6b9d1a45f69b52f772 SHA256 d8cb14555f43c1b19ffbd7d46600c4bfd3bdcfbf2839b18f98290c1759c91c20
+DIST supertux-0.3.0.tar.bz2 37101881 RMD160 1c7c54c7e47e7143091f2a8ea73414e8e66ea81f SHA1 3a2b7ff90759982af697ecf62243b4ec2736ac53 SHA256 2d9b5807ba805483bfe5dd675d78f2b5155f1ea0db1fdf5739a028d60b04d9cc
 DIST supertux-0.3.1d.tar.bz2 44560484 RMD160 d8adf8921310d83687b75019345e70721235cb38 SHA1 5d9fd1ee9da7c207ed3294fbc6aa189e68768d93 SHA256 2bdddaeba1e6806d7c6cb17d2ddcbca1e8d4ff3dea7fb7a1139eb0ee01ee9608
-EBUILD supertux-0.3.1.ebuild 1021 RMD160 8e993f7ae00d689a54cc7b799576c8ec6bb95a1f SHA1 5a163e13bb09ae5c60ff456d0a56b0af501438cb SHA256 97b7d3d03d98d161f06c9cf44093f7835daafc278b14aa1b16124226f0d3d792
+EBUILD supertux-0.3.0.ebuild 845 RMD160 763a5a73b6157f190cc5531e8596c9019cebac0d SHA1 ab5e8db322d5998cc85b2c2082034143bb6faa69 SHA256 12d632683eaeceeeef9672e13b680d67590c9c647b12887cd0b3ab48de5725f7
+EBUILD supertux-0.3.1.ebuild 991 RMD160 4d19b34882c170fe4ca06062f91d68f585aa75c3 SHA1 493536e4623ce414a8b14cf655fcbfec64b23b13 SHA256 e298935f139cb8edbd351e46c4d2d660ed52c66d3f382c71a480a9736732eba1
 EBUILD supertux-9999.ebuild 948 RMD160 e27876bf7e1a46ef5cc5cb064cc0f58ac1b39962 SHA1 ab79a91ebeeaa740906bc020f1e5510ea915d22e SHA256 8ad1a32432f2291f1876ed5e496ec8c6c84595b17566835fe04ba58355c62185
-MISC ChangeLog 940 RMD160 d4f381553f3fe3a41e377e505cf440be2cb37f4c SHA1 9dccde3ae234ebbc73c91b27022aba989afaaf57 SHA256 a355d935fa18f1bf47ff502547ed3871bc90615244da29147df5ded707394e50
+MISC ChangeLog 1108 RMD160 a1189f391b07831af66679485707dfd3e0814124 SHA1 77297200f9c87604058d062a8aa2daec43afa535 SHA256 2c8897ffa3da6a7fd878e65cc360748e09c50ce9a0e967255a0feee32017250e
