@@ -1,6 +1,10 @@
 # ChangeLog for games-arcade/supertux
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
 
+  06 Dec 2008; Piotr Szymaniak <lazy_bum@o2.pl> +supertux-0.3.0.ebuild,
+  supertux-0.3.1.ebuild:
+  Readded 0.3.0. Masked 0.3.1 due to weird, random slowdowns in game.
+
   06 Dec 2008; Piotr Szymaniak <lazy_bum@o2.pl> -supertux-0.3.0.ebuild,
   supertux-0.3.1.ebuild:
   Removed cruft, added nicer ebuild from voyageur overlay.
